# STN

crewai_stn_analysis/: README.md  pyproject.toml
crewai_stn_analysis/src/crewai_stn_analysis/: crew.py  main.py
crewai_stn_analysis/src/crewai_stn_analysis/config/: agents.yaml  tasks.yaml
