[project]
name = "crewai_stn_analysis"
version = "0.1.0"
description = "crewai_stn_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crewai_stn_analysis = "crewai_stn_analysis.main:run"
run_crew = "crewai_stn_analysis.main:run"
train = "crewai_stn_analysis.main:train"
replay = "crewai_stn_analysis.main:replay"
test = "crewai_stn_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
